--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint --ext .tsx,ts src/",
     "eject": "react-scripts eject"
   },
+  "homepage": "/property-investment-calculator",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
